# irodori

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  flake.nix
proptest-regressions/: palette.txt
src/: lib.rs  palette.rs  semantic.rs
