[package]
name = "irodori"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Irodori (彩り) — theme and color system with Nord palette and semantic color mapping"
homepage = "https://github.com/pleme-io/irodori"
repository = "https://github.com/pleme-io/irodori"
readme = "README.md"
license = "MIT"
categories = ["rendering"]
keywords = ["color", "theme", "nord", "palette"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
serde_json = "1"
